--- a/.gitignore
+++ b/.gitignore
@@ -6,15 +6,10 @@ pom.xml
 pom.xml.asc
 *.jar
 *.class
-.lein-deps-sum
-.lein-failures
-.lein-plugins
-.lein-repl-history
+.lein*
 *~
 .idea
 /.DS_Store
-/classes
-/lib
 closure
 /core.js
 /coreadvanced.js
